--- a/package.json
+++ b/package.json
@@ -14,14 +14,25 @@
     "typecheck:node": "tsc --noEmit -p tsconfig.node.json --composite false",
     "typecheck:web": "vue-tsc --noEmit -p tsconfig.web.json --composite false",
     "typecheck": "npm run typecheck:node && npm run typecheck:web",
+    "prepare": "husky",
     "start": "electron-vite preview",
     "dev": "dotenv electron-vite dev",
-    "build": "npm run typecheck && electron-vite build",
+    "dev:watch": "dotenv electron-vite dev -- -w",
+    "debug": "electron-vite -- --inspect --sourcemap --remote-debugging-port=9222",
     "postinstall": "electron-builder install-app-deps",
-    "build:unpack": "npm run build && electron-builder --dir",
-    "build:win": "npm run build && electron-builder --win",
-    "build:mac": "npm run build && electron-builder --mac",
-    "build:linux": "npm run build && electron-builder --linux"
+    "build": "npm run typecheck && electron-vite build",
+    "build:check": "pnpm lint && pnpm test",
+    "build:web": "npm run build",
+    "build:unpack": "dotenv npm run build && electron-builder --dir",
+    "build:win": "dotenv npm run build && electron-builder --win --x64 --arm64",
+    "build:win:x64": "dotenv npm run build && electron-builder --win --x64",
+    "build:win:arm64": "dotenv npm run build && electron-builder --win --arm64",
+    "build:mac": "dotenv npm run build && electron-builder --mac --arm64 --x64",
+    "build:mac:arm64": "dotenv npm run build && electron-builder --mac --arm64",
+    "build:mac:x64": "dotenv npm run build && electron-builder --mac --x64",
+    "build:linux": "dotenv npm run build && electron-builder --linux --x64 --arm64",
+    "build:linux:arm64": "dotenv npm run build && electron-builder --linux --arm64",
+    "build:linux:x64": "dotenv npm run build && electron-builder --linux --x64"
   },
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.2",
@@ -44,9 +55,11 @@
     "vue-sonner": "^2.0.9"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^7.3.0",
     "@electron-toolkit/eslint-config-prettier": "3.0.0",
     "@electron-toolkit/eslint-config-ts": "^3.1.0",
     "@electron-toolkit/tsconfig": "^2.0.0",
+    "@intlify/eslint-plugin-vue-i18n": "^4.1.1",
     "@types/electron-localshortcut": "^3.1.3",
     "@types/node": "^22.19.1",
     "@types/qs": "^6.14.0",
@@ -67,6 +80,7 @@
     "eslint-plugin-vue": "^10.6.2",
     "fetch-socks": "^1.3.2",
     "he": "^1.2.0",
+    "husky": "^9.1.7",
     "i18next": "^25.8.1",
     "ipaddr.js": "^2.3.0",
     "less": "^4.5.1",
