--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "homepage": "https://electron-vite.org",
   "scripts": {
     "format": "prettier --write .",
-    "lint": "eslint --cache .",
+    "lint": "eslint --ext .vue,.js,.jsx,.ts,.tsx ./ --max-warnings 0",
+    "lint:fix": "eslint --ext .vue,.js,.jsx,.ts,.tsx ./ --max-warnings 0 --fix",
     "typecheck:node": "tsc --noEmit -p tsconfig.node.json --composite false",
     "typecheck:web": "vue-tsc --noEmit -p tsconfig.web.json --composite false",
     "typecheck": "npm run typecheck:node && npm run typecheck:web",
@@ -34,6 +35,15 @@
     "build:linux:arm64": "dotenv npm run build && electron-builder --linux --arm64",
     "build:linux:x64": "dotenv npm run build && electron-builder --linux --x64"
   },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,cjs,mjs,cts,mts,vue}": [
+      "prettier --write",
+      "eslint --fix"
+    ],
+    "*.{html,vue,css,sass,less,yml,yaml,json}": [
+      "prettier --write"
+    ]
+  },
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
@@ -56,6 +66,8 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^7.3.0",
+    "@commitlint/cli": "^20.4.1",
+    "@commitlint/config-conventional": "^20.4.1",
     "@electron-toolkit/eslint-config-prettier": "3.0.0",
     "@electron-toolkit/eslint-config-ts": "^3.1.0",
     "@electron-toolkit/tsconfig": "^2.0.0",
@@ -85,6 +97,7 @@
     "ipaddr.js": "^2.3.0",
     "less": "^4.5.1",
     "less-loader": "^12.3.0",
+    "lint-staged": "^16.2.7",
     "macos-release": "^3.4.0",
     "node-forge": "^1.3.3",
     "node-machine-id": "^1.1.12",
