fix: 修复打包配置

--- a/package.json
+++ b/package.json
@@ -25,15 +25,15 @@
     "build:check": "pnpm lint && pnpm test",
     "build:web": "npm run build",
     "build:unpack": "dotenv npm run build && electron-builder --dir",
-    "build:win": "dotenv npm run build && electron-builder --win --x64 --arm64",
-    "build:win:x64": "dotenv npm run build && electron-builder --win --x64",
-    "build:win:arm64": "dotenv npm run build && electron-builder --win --arm64",
-    "build:mac": "dotenv npm run build && electron-builder --mac --arm64 --x64",
-    "build:mac:arm64": "dotenv npm run build && electron-builder --mac --arm64",
-    "build:mac:x64": "dotenv npm run build && electron-builder --mac --x64",
-    "build:linux": "dotenv npm run build && electron-builder --linux --x64 --arm64",
-    "build:linux:arm64": "dotenv npm run build && electron-builder --linux --arm64",
-    "build:linux:x64": "dotenv npm run build && electron-builder --linux --x64"
+    "build:win": "dotenv npm run build && electron-builder --win --x64 --arm64 --publish never",
+    "build:win:x64": "dotenv npm run build && electron-builder --win --x64 --publish never",
+    "build:win:arm64": "dotenv npm run build && electron-builder --win --arm64 --publish never",
+    "build:mac": "dotenv npm run build && electron-builder --mac --arm64 --x64 --publish never",
+    "build:mac:arm64": "dotenv npm run build && electron-builder --mac --arm64 --publish never",
+    "build:mac:x64": "dotenv npm run build && electron-builder --mac --x64 --publish never",
+    "build:linux": "dotenv npm run build && electron-builder --linux --x64 --arm64 --publish never",
+    "build:linux:arm64": "dotenv npm run build && electron-builder --linux --arm64 --publish never",
+    "build:linux:x64": "dotenv npm run build && electron-builder --linux --x64 --publish never"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,cjs,mjs,cts,mts,vue}": [
