feat(i18n): 添加完整的国际化支持系统 - 添加vue-i18n依赖并配置多语言环境 - 实现主题和语言的系统级状态管理 - 新增快速菜单组件支持语言切换 - 集成多语言配置到所有相关UI组件 - 更新应用入口和存储配置支持国际化

--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "vite": "^7.2.6",
     "vue": "^3.5.25",
     "vue-eslint-parser": "^10.2.0",
+    "vue-i18n": "^11.2.8",
     "vue-tsc": "^3.1.6",
     "windows-release": "^7.1.0",
     "winston": "^3.19.0",
