--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "lint-staged": {
     "*.{js,jsx,ts,tsx,cjs,mjs,cts,mts,vue}": [
       "prettier --write",
-      "eslint --fix"
+      "eslint --fix --no-warn-ignored"
     ],
     "*.{html,vue,css,sass,less,yml,yaml,json}": [
       "prettier --write"
@@ -60,6 +60,7 @@
     "tailwindcss": "^4.1.18",
     "turndown": "^7.2.2",
     "tw-animate-css": "^1.4.0",
+    "unplugin-vue-components": "^31.0.0",
     "vue-input-otp": "^0.3.2",
     "vue-router": "^5.0.2",
     "vue-sonner": "^2.0.9"
@@ -110,8 +111,10 @@
     "sm-crypto-v2": "^1.15.1",
     "typescript": "^5.9.3",
     "undici": "6.21.2",
+    "unplugin-auto-import": "^21.0.0",
     "uuid": "^13.0.0",
     "vite": "^7.2.6",
+    "vite-plugin-vue-devtools": "^8.0.6",
     "vue": "^3.5.25",
     "vue-eslint-parser": "^10.2.0",
     "vue-i18n": "^11.2.8",
