feat: 增加本地存储(sqllite)

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
+    "@libsql/client": "^0.17.0",
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/vue-table": "^8.21.3",
     "@vueuse/core": "^14.2.0",
@@ -77,12 +78,14 @@
     "@types/electron-localshortcut": "^3.1.3",
     "@types/node": "^22.19.1",
     "@types/qs": "^6.14.0",
+    "@types/semver": "^7.7.1",
     "@vitejs/plugin-vue": "^6.0.2",
     "axios": "^1.13.4",
     "commitizen": "^4.3.1",
     "crypto-js": "^4.2.0",
     "cz-git": "^1.12.0",
     "dotenv-cli": "^11.0.0",
+    "drizzle-orm": "^0.45.1",
     "electron": "^39.2.6",
     "electron-builder": "^26.0.12",
     "electron-devtools-installer": "^4.0.0",
@@ -122,6 +125,7 @@
     "vue-eslint-parser": "^10.2.0",
     "vue-i18n": "^11.2.8",
     "vue-tsc": "^3.1.6",
+    "webdav": "^5.9.0",
     "windows-release": "^7.1.0",
     "winston": "^3.19.0",
     "winston-daily-rotate-file": "^5.0.0"
